libs/gst/controller/gstdirectcontrolbinding.c
@@ -32,7 +32,7 @@
 
 #include "gstdirectcontrolbinding.h"
 
-#include <math.h>
+#include <gst/math-compat.h>
 
 #define GST_CAT_DEFAULT control_binding_debug
 GST_DEBUG_CATEGORY_STATIC (GST_CAT_DEFAULT);
